--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,41 @@
 body {
-    background: lightblue;
+    background:  #145a32 ;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.assignment{
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    background:  #17a589;
+    border-radius: 5px;
+}
+
+.assignment img{
+    width: 200px;
+    margin: 10px;
+    border: 4px solid #abebc6;
+    border-radius: 5px;
+}
+
+.assignment img:hover{
+    border: 4px dashed red;
+}
+
 h1{
-    color: darkblue;
+    color:   #abebc6;
     text-align: center;
+}
+
+h1:hover{
+    color: red;
+}
+
+a {
+    text-decoration: none;
+    color:   #abebc6;
+}
+
+a:hover {
+    color: red;
 }
