--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.assignments{
+    display:flex;
+    flex-wrap:wrap;
+}
+
 .assignment{
-    display: flex;
+    width: 22%;
     padding: 10px;
     margin: 10px;
+    padding: 20px 10;
     background:  #17a589;
     border-radius: 5px;
 }
@@ -15,7 +22,8 @@ body {
     width: 200px;
     margin: 10px;
     border: 4px solid #abebc6;
-    border-radius: 5px;
+    display:block;
+    margin:auto;
 }
 
 .assignment img:hover{
@@ -24,6 +32,10 @@ body {
 
 h1{
     color:   #abebc6;
+    text-align: center;
+}
+
+h2{
     text-align: center;
 }
 
