--- a/csce242/exercises/04animation/styles.css
+++ b/csce242/exercises/04animation/styles.css
@@ -1,3 +1,13 @@
+/* Structure */
+:root {
+  --main-background-color: orange;
+}
+
+body {
+  background-color: var(--main-background-color);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #ball {
   background-color: cornflowerblue;
   width: 100px;
