--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -37,6 +37,12 @@ body {
   margin: 5px;
 }
 
+#main-footer {
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
+}
+
 /*Image Slideshow*/
 
 #img-section {
@@ -142,7 +148,10 @@ body {
   .flex-item {
     min-width: 50%;
     max-width: 50%;
-    min-height: 30%;
-    max-height: 30%;
+  }
+  .flex-item p,
+  .flex-item #img-section {
+    min-height: 80%;
+    max-height: 80%;
   }
 }
