--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -74,7 +74,7 @@ body {
 }
 
 /* Larger Resolutions */
-@media (min-width: 1000px) {
+@media (min-width: 1139px) {
   .flex-container {
     display: flex;
     flex-direction: row;
@@ -95,7 +95,7 @@ body {
 }
 
 /* Smaller Resolutions */
-@media (max-width: 999px) {
+@media (max-width: 1138px) {
   .flex-container {
     display: flex;
     flex-direction: column;
@@ -104,6 +104,7 @@ body {
 
   .assignments {
     margin: 10px 0;
+    flex: 1;
   }
 
   #main-header {
