--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -7,6 +7,13 @@
   border-radius: 5px;
 }
 
+.flex-container a {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 2px;
+}
+
 #assignment-header {
   background-color: lightgrey;
   padding: 10px;
